# moviemaster-X

./: CLAUDE_CODE.md  PROJECT_SUMMARY.md  README.md  RELEASE.md  THEMES.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  moviemaster_config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: agent_loop.rs  llm.rs  memory.rs  mod.rs  skills.rs  system_prompt.md
src-tauri/src/commands/: agent.rs  config.rs  directory.rs  duplicate.rs  import_export.rs  mod.rs  movie.rs  pt_depiler.rs  qbittorrent.rs  settings.rs  smb.rs  subtitle.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/services/: import_export.rs  mod.rs  nfo.rs  scan_manager.rs  smb_client.rs  subtitle.rs  tmdb.rs  vnfo.rs
src/components/: AIAssistant.tsx  DuplicateManager.tsx  LLMSettings.tsx  MovieDetailDialog.tsx  PTDepilerSettings.tsx  QBittorrentSettings.tsx  SeriesDetailDialog.tsx  ThemeSwitcher.tsx
src/components/dashboard/: DirectoryCard.tsx  EmptyState.tsx  FilterButton.tsx  MovieCard.tsx  NavButton.tsx  SeriesCard.tsx  SettingItem.tsx  StatItem.tsx  TMDBApiKeySetting.tsx  index.ts
src/components/layout/: sidebar.tsx
src/components/ui/: button.tsx  dialog.tsx
src/hooks/: useTheme.ts
src/lib/: api.test.ts  api.ts  grouping.ts
src/pages/: Dashboard.tsx
src/stores/: directoryStore.ts  movieStore.test.ts  movieStore.ts
src/test/: setup.ts
