[package]
name = "moviemaster"
version = "0.1.0"
description = "影视管家 - 本地影视文件管理工具"
authors = ["MovieMaster Team"]
edition = "2021"

[lib]
name = "moviemaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "=0.4.38", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
directories = "5"
regex = "1"
urlencoding = "2"
csv = "1"
